--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   date_time_picker: "^2.1.0"
   file_picker: ^5.3.0
   http: ^0.13.6
+  multi_select_flutter: ^4.1.3
+  excel: 2.1.0
+ 
 
 dev_dependencies:
   flutter_test:
